--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -19,6 +19,10 @@
     </RelativeLayout>
 
     <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp" />
+
+    <ImageView
         android:id="@+id/iv_lock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
